--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
 .answer {
   display: none;
 }
+
+.jumbotron{
+  border-style: dashed;
+  border-width: medium;
+  border-color: black;
+  text-align: center;
+
+}
+.container {
+
+}
