change answer div to 4 new divs in html with varying messages and remove recommendedTrack span, hide these new divs in CSS, remove text insert function from initial branching in js that was linked to recommendedTrack span and changed to show and hide functions for new divs.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,16 @@
-.answer {
+.recommendDesign {
+  display: none;
+}
+
+.recommendRuby {
+  display: none;
+}
+
+.recommendPhp {
+  display: none;
+}
+
+.recommendOther {
   display: none;
 }
 
