add images to recommend divs, add row and columns to recommend divs, style images and text for recommend divs in css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,3 +97,22 @@ body {
   font-size: 14px;
 
 }
+
+img {
+  width: 180px;
+  height: auto;
+  margin-bottom: 10px;
+  border-style: groove;
+  border-color: black;
+  border-width: medium;
+  border-radius: 3%;
+  padding: 10px;
+}
+
+.col-md-9 h4 {
+  padding-top: 20px;
+}
+.photos {
+  text-align: center;
+
+}
